# 260414

./: .gitattributes  .gitignore  build_thesis.py  build_thesis_v2.py  convert_doc.py  fill_forms.py  gen_thesis.js  landing_page_final.html  make_figs.py  package-lock.json  pdf2img.py  preview_pdf.py  read_docs.py  skills使用.md  template_dump.txt
Aiszr/: .env.example  .gitignore  CLAUDE.md  HEYGEM_HANDOFF.md  STATUS.md  ai_reply.py  app_paths.py  audio_output.py  audio_segmenter.py  audio_worker.py  avatar_library.py  avatar_preprocessor.py  capture.py  decoder.py  digital_human_pipeline.py  digital_human_speech_scheduler.py  fetcher.py  ffmpeg_ops.py  fluent_page.py  keyword_engine.py  keyword_rewriter.py  live_control_config.py  live_session_memory.py  livetalking_avatar_precheck.py  livetalking_runtime.py  local_voice_runtime.py  maintenance.py  memory_manager.py  obs_actions.py  ops_metrics.py  proto_defs.py  pyproject.toml  replay_log.py  rtmp_server.py  runtime.yaml.example  runtime_config.py  screenshot_pages.py  truth_stream.py  tts_worker.py  ui.py  (+11 more)
Aiszr/heygem_realtime/: __init__.py  audio_worker.py  batch_client.py  client.py  video_worker.py
Aiszr/tests/: conftest.py  test_ai_reply.py  test_audio_segmenter.py  test_capture.py  test_decoder.py  test_decoder_loss_metrics.py  test_digital_human_pipeline_audio.py  test_digital_human_speech_scheduler.py  test_fetcher.py  test_general_settings_maintenance.py  test_heygem_realtime.py  test_keyword_engine.py  test_keyword_rewriter.py  test_keyword_voice_insertion.py  test_live_capture_enable.py  test_maintenance.py  (+16 more)
(+39 files in other folders)
