[project]
name = "aiszr"
version = "0.5.0"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.58.0",
    "loguru>=0.7",
    "protobuf>=5.29,<7",
    "PyQt5>=5.15.10",
    "PyQt-Fluent-Widgets>=1.5.0",
    "numpy",
    "fastapi[standard]>=0.135.0",
    "httpx>=0.28",
    "websockets>=15.0",
    "dashscope>=1.20",
    "python-dotenv>=1.0",
    "pygame>=2.5",
    "imageio-ffmpeg>=0.5",
    "PyYAML>=6.0",
    "PyAudioWPatch>=0.2.12",
    "websocket-client>=1.7.0",
    "requests>=2.31",
    "opencv-python>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["ui_pages*", "ui_dialogs*"]
exclude = ["browser_data*", "data*", "wechat_browser_data*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
